crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/function_parameter/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[input.sol:5:29]
   │
 5 │     function f(uint a, uint a) public pure {}
   │                             ┬  
   │                             ╰── Error occurred here.
───╯
